# bib-csl-xsl

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  IEEE_examples.docx  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
configs/: example.yaml
docs/: Makefile  conf.py  index.md  readme.md
docs/_ext/: napoleon_numpy_parser.py
scripts/: train_model.py
src/bib_csl_xsl/: __init__.py  __main__.py  converter.py  display.py  features.py
tests/: test_converter.py  test_placeholder.py
tests/fixtures/: ieee.csl
