[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bib-csl-xsl"
version = "0.1.0"
description = "Convert Citation Style Language to XML Style Language, CSL to XSL, for Microsoft Word bibliography."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "John D. Fisher", email = "jdfenw@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas>=2.0",
]

[dependency-groups]

dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
    "joblib-stubs>=1.5.2.0.20250831",
    "pre-commit>=3.7",
]

training = [
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "pyyaml>=6.0",
]
docs = [
    "sphinx>=7.0",
    "myst-parser>=3.0",
    "linkify-it-py>=2.0",
    "sphinx-autodoc2>=0.5",
    "furo>=2024.1",
]

[project.urls]
Homepage = "https://github.com/jfishe/bib-csl-xsl"
Repository = "https://github.com/jfishe/bib-csl-xsl"
Issues = "https://github.com/jfishe/bib-csl-xsl/issues"

# ---------------------------------------------------------------------------
# Hatchling — src layout
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/bib_csl_xsl"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit
    "T20",    # flake8-print
    "D",      # pydocstyle
    "RUF",    # ruff-specific
    "PTH",    # flake8-use-pathlib
]
ignore = ["D100", "D104", "D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short -q"

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/bib_csl_xsl"]

[tool.coverage.report]
show_missing = true
fail_under = 50

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
