[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "bib-csl-xsl"
version = "0.3.0"
description = "Convert Citation Style Language to Extensible Style Language, CSL to XSL, for Microsoft Word bibliography."
readme = "README.md"
license = "MIT"
authors = [ { name = "John D. Fisher", email = "jdfenw@gmail.com" } ]
requires-python = ">=3.13"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "defusedxml>=0.7.1",
]
urls.Homepage = "https://github.com/jfishe/bib-csl-xsl"
urls.Issues = "https://github.com/jfishe/bib-csl-xsl/issues"
urls.Repository = "https://github.com/jfishe/bib-csl-xsl"
scripts.bib-csl-xsl = "bib_csl_xsl.__main__:main"

[dependency-groups]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.4",
  "types-defusedxml>=0.7.0.20260504",
]
docs = [
  "furo>=2024.1",
  "linkify-it-py>=2",
  "myst-parser>=3",
  "sphinx>=7",
  "sphinx-autodoc2>=0.5",
]

[tool.hatch]
build.targets.wheel.packages = [ "src/bib_csl_xsl" ]

[tool.ruff]
target-version = "py313"
line-length = 99
src = [ "src", "tests" ]
lint.select = [
  "A",
  "B",
  "C4",
  "D",
  "E",
  "F",
  "I",
  "N",
  "PTH",
  "RUF",
  "S",
  "SIM",
  "T20",
  "UP",
  "W",
]
lint.ignore = [ "D100", "D104", "D203", "D213" ]
lint.per-file-ignores."src/bib_csl_xsl/converter.py" = [ "E501" ]
lint.per-file-ignores."tests/**" = [ "D", "S101" ]
lint.pydocstyle.convention = "numpy"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.addopts = "--strict-markers --tb=short -q"

[tool.coverage]
run.source = [ "src/bib_csl_xsl" ]
report.fail_under = 50
report.show_missing = true
